JQuery-Full 1.10.2~core3

	* [Feature] added in the sticky waypoints plugin
	-- Charlie Powell <charlie@eval.bz>  Mon, 30 Sep 2013 00:05:21 -0400

JQuery-Full 1.10.2~core2

	* Make use of the namespace versions of View instead of static.
	-- Charlie Powell <charlie@eval.bz>  Sat, 31 Aug 2013 17:37:26 -0400

JQuery-Full 1.10.2~core1

	* New upstream version of jquery, 1.10.2
	* New upstream version of jquery waypoints (2.0.3)
	* Forgot the version update on jquery-full.
	-- Charlie Powell <charlie@eval.bz>  Tue, 06 Aug 2013 20:19:57 -0400

JQuery-Full 1.10.0~core1

	* Updated jquery to newest upstream version.
	* Updated jquery-ui to newest upstream version.
	-- Charlie Powell <charlie@eval.bz>  Sat, 01 Jun 2013 15:50:29 -0400

JQuery-Full 1.9.1~core3

	* [Feature] added waypoints shortcuts

JQuery-Full 1.9.1~core2

	* [Feature] added jquery.smooth-scroll asset and library

JQuery-Full 1.9.1~core1

	* Updated to latest release of jQuery 1.9.1
	* Updated jquery.cookie, jquery.form, jquery.json, jquery.masonry, jqueryui.timepicker to latest
	  versions
	-- Charlie Powell <charlie@eval.bz>  Mon, 15 Apr 2013 15:29:23 -0400

JQuery-Full 1.8.3~core4

	* Updated to jQuery UI 1.10.2

JQuery-Full 1.8.3~core3

	* Updated timepicker to latest release
	-- Charlie Powell <charlie@eval.bz>  Fri, 22 Feb 2013 08:34:02 -0500

JQuery-Full 1.8.3~core2

	* [Feature] Added jquery.waypoints plugin into package.
	-- Charlie Powell <charlie@eval.bz>  Mon, 04 Feb 2013 02:04:39 -0500

JQuery-Full 1.8.3~core1

	* Updated jQuery to 1.8.3
	-- Charlie Powell <charlie@eval.bz>  15 Jan 2012

JQuery-Full 1.8.2~core1

	* Updated jQuery to version 1.8.2
	* Updated jQueryUI to version 1.9.0
	-- Nicholas Hinsch <nicholas@eval.bz>  18 Oct 2012

JQuery-Full 1.8.0~core3

	* [Feature] Added jquery.timepicker plugin
	-- Charlie Powell <charlie@eval.bz>  4 Oct 2012

JQuery-Full 1.7.1~core2

	* [Feature] Added jquery.cookie plugin.
	-- Charlie Powell <charlie@eval.bz>  20 Jul 2012

JQuery-Full 1.7.0-1
